# purrfect-response

./: .gitignore  README.md  TODO.md  config.json  main.py  pyproject.toml  sample.py  set_tts.py  speak.py  stop_tts.py  test_tts.py  toggle_tts.py  tts_daemon.py
.claude/: settings.json
